# FK35

./: .gitignore  README.md
practice/3_analysis/: main.py  pyproject.toml
practice/3_analysis/templates/: index.html
practice/3_document/: .gitignore  main.py  pyproject.toml
practice/3_document/frontend/: edit.html  index.html
practice/3_document/frontend/css/: style.css
practice/3_document/frontend/js/: edit.js  main.js
practice/3_document/src/: main.py
practice/3_document/src/api/: __init__.py  file.py
practice/3_document/src/templates/: Application_form_for_voluntary_expulsion_from_college.docx  test.docx  Бланк заявления на отчисление из колледжа по собственному желанию.docx
practice/3_document/src/utils/: file.py
practice/3_mobile/: app.json  package-lock.json  package.json
practice/3_mobile/app/(tabs)/: index.tsx
practice/3_mobile_stepic/: package.json
practice/3_mobile_stepic/my-app/: package-lock.json
